# CreAIta

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  run.py  test_handlers.py
.github/workflows/: ci.yml
app/: database.py  main.py  stream_handlers.py  stream_manager.py
app/static/: index.html
nginx/: creaita.conf
scripts/: deploy-local.sh  deploy.sh  health-check.sh
systemd/: creaita.service
tests/: test_api.py  test_database.py
